<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--<string name="app_name">MyFin</string>-->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="preferences_theme_option_key_light" translatable="false">preferences_theme_option_light</string>
    <string name="preferences_theme_option_key_dark" translatable="false">preferences_theme_option_dark</string>
    <string name="preferences_theme_option_key_system" translatable="false">preferences_theme_option_system</string>
    <string name="preferences_key_theme" translatable="false">preferences_key_theme</string>
    <string name="preferences_key_api_url" translatable="false">preferences_key_api_url</string>

    <string name="login_btn_label">Sign in</string>
    <string name="login_username_label">Username</string>
    <string name="login_password_label">Password</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>


    <string name="dashboard_label">Dashboard</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="generic_exit">Exit</string>
    <string name="generic_yes">Yes</string>
    <string name="generic_go_back">Go back</string>
    <string name="confirmation_logout_message">Are you sure you want to leave?</string>
    <string name="generic_patrimony">Net worth</string>
    <string name="generic_investment">Investing</string>
    <string name="generic_passive">Debt</string>
    <string name="generic_operating_funds_shorten">Op. funds</string>
    <string name="generic_cancel">Cancel</string>
    <string name="generic_authentication">Authentication</string>
    <string name="generic_last_update">Last update</string>
    <string name="generic_open">Open</string>
    <string name="generic_closed">Closed</string>

    <string name="biometric_auth_prompt_description">Validate your identity to get in</string>
    <string name="biometric_auth_prompt_subtitle">Biometrics</string>
    <string name="biometric_auth_prompt_title">@string/generic_authentication</string>
    <string name="account_type_external_label">External Account</string>
    <string name="no_category_label">No Category</string>
    <string name="no_entity_label">No Entity</string>
    <string name="no_description_label">No Description</string>


    <!-- Main Menu -->
    <string name="main_menu_dashboard">Dashboard</string>
    <string name="main_menu_transactions">Transactions</string>
    <string name="main_menu_accounts">Accounts</string>
    <string name="main_menu_categories">Categories</string>
    <string name="main_menu_entities">Entities</string>
    <string name="main_menu_rules">Rules</string>
    <string name="main_menu_budgets">Budgets</string>
    <string name="main_menu_investments">Investments</string>
    <string name="main_menu_stats">Stats</string>
    <string name="main_menu_group_administration">Management</string>

    <!-- Labels -->
    <string name="transactions_label">Transactions</string>
    <string name="transaction_details_label">Transaction details</string>
    <string name="budgets_label">Budgets</string>
    <string name="budget_details_label">Budget details</string>
    <string name="accounts_label">Accounts</string>
    <string name="account_checking_label">Checking account</string>
    <string name="account_savings_label">Savings account</string>
    <string name="account_investing_label">Investment</string>
    <string name="account_credit_label">Credit</string>
    <string name="account_meal_card_label">Meal card</string>
    <string name="account_wallet_label">Wallet</string>
    <string name="account_other_label">Other</string>

    <!-- Preferences -->
    <string name="preferences_theme_option_dark_theme">Dark Theme</string>
    <string name="preferences_theme_option_light_theme">Light Theme</string>
    <string name="preferences_theme_option_system_default">Auto (System)</string>
    <string name="generic_appearance">Appearance</string>
    <string name="preferences_theme_summary">Choose a theme for the app</string>

    <!-- Dashboard -->
    <string name="dashboard_monthly_overview_chart_planned_amount_label">/%s</string>
    <string name="generic_settings">Settings</string>
    <string name="preferences_theme_title">Theme</string>

    <!-- Transactions -->
    <string name="transactions_list_item_date_format">%s %s %s</string>
    <string name="add_transaction">Add transaction</string>
    <string name="edit_transaction">Edit transaction</string>
    <string name="transaction_date">Date</string>
    <string name="confirmation_transaction_delete">Are you sure you want to remove this transaction?</string>

    <!-- Budgets -->
    <string name="budget_details_category_percent_of_planned_amount">%.2f%% of %s</string>

    <!-- Misc -->
    <string name="generic_income">Income</string>
    <string name="generic_expenses">Expense</string>
    <string name="generic_transfer">Transfer</string>
    <string name="account_from_label">Sender Account </string>
    <string name="account_to_label">Destination Account</string>
    <string name="category_label">Category</string>
    <string name="entity_label">Entity</string>
    <string name="description_label">Description</string>
    <string name="account_status_active">Active</string>
    <string name="account_status_inactive">Inactive</string>
    <string name="generic_no_data_to_display_label">No data</string>
    <string name="current_expense">Current Expenses</string>
    <string name="current_income">Current Income</string>
    <string name="planned_expense">Estimated Expenses</string>
    <string name="planned_income">Estimated Income</string>
    <string name="generic_save">Save</string>
    <string name="generic_essential">Essential</string>
    <string name="generic_amount">Amount</string>
    <string name="generic_edit">Edit</string>
    <string name="transaction_added_success_message">Transaction successfully added!</string>
    <string name="transaction_updated_success_message">Transaction successfully updated!</string>
    <string name="transaction_deleted_success_message">Transaction successfully deleted!</string>
    <string name="keep_session_label">Keep Session</string>
    <string name="generic_data">Data</string>
    <string name="preferences_api_base_url_title">API Base URL</string>
    <string name="monthly_overview">Monthly Overview</string>
    <string name="monthly_distribution">Monthly distribution</string>
    <string name="latest_transactions">Latest transactions</string>
    <string name="all_fem">All</string>
    <string name="operating_funds">Operating Funds</string>
    <string name="debts">Debts</string>
    <string name="investments">Investments</string>
    <string name="others_fem">Others</string>
    <string name="dashboard_monthly_overview_amount_left">left in monthly expenses</string>
    <string name="dashboard_monthly_overview_of_spent_label">of %s spent</string>

    <string name="error_invalid_url">Please enter a valid URL</string>
</resources>