<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_private"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.afaneca.myfin.closed.dashboard.ui.DashboardFragment"
        android:label="@string/dashboard_label"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/transactionsFragment"
        android:name="com.afaneca.myfin.closed.transactions.ui.TransactionsFragment"
        android:label="@string/transactions_label"
        tools:layout="@layout/fragment_transactions" >
        <action
            android:id="@+id/action_transactionsFragment_to_transactionDetailsFragment"
            app:destination="@id/transactionDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/transactionDetailsFragment"
        android:name="com.afaneca.myfin.closed.transactions.ui.TransactionDetailsFragment"
        android:label="@string/transaction_details_label"
        tools:layout="@layout/fragment_transaction_details" />
</navigation>